---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 2025-03-
  Changes:
    - Display ai training recipes with the rest of moshine's processes
    - Do away with "space platforms for ground" dependancy

    todo add achievements
    todo rename maraxsis glass to reinforced glass
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2025-03-28
  Changes:
    - Data processor can be frozen
    - Data processor +33% energy usage
  Graphics:
    - Heavily edited data processor + light to be more unique and computer-like
  Bugfixes:
    - Fixed switched curved/diagonal rails names
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2025-03-25
  Changes:
    - Data processor data output is in every corner
    - Data processor can't transfer inputed data (consequence fo fiber length fix)
  Bugfixes:
    - Fixed fiber length not being infinite
    - Fixed that datacells were recycling into datacells with data
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2025-03-24
  Changes:
    - Mining time neodymium rails proportional to health
  Compatibility:
    - Basic compatibility with Gotlag's Glass
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2025-03-22
  Changes:
    - First tier of AI training unlocks after you create an ai-trainer
    - Changed name of big accumulator and big solar panel
  Bugfixes:
    - Neodymium rails recycle to the correct ingredients
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-03-21
  Changes:
    - Neodymium rails have a hidden power pole to connect power grids